--- a/index.css
+++ b/index.css
@@ -1,16 +1,15 @@
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   word-spacing: 0.2rem;
 }
-:root{
-    --primary-background-color:#9ec91e;
-    --secondary-background-color:#f2c244;
-    --light-background-color:#EFECEC;
-    --computer-score-color:#1230AE;
-    --player-score-color:#FF204E;
+:root {
+  --primary-background-color: #9ec91e;
+  --secondary-background-color: #f2c244;
+  --light-background-color: #efecec;
+  --computer-score-color: #1230ae;
+  --player-score-color: #ff204e;
 }
 
 html {
@@ -20,28 +19,23 @@ html {
 body {
   font-family: "Bebas Neue", sans-serif;
   font-size: 1.6rem;
-  user-select: none; 
-  
+  user-select: none;
 }
-
-
 
 .game-container {
   display: flex;
   flex-direction: column;
- 
+
   align-items: center;
   min-height: 100vh;
   width: 100%;
   max-width: 50vw;
   background-color: var(--primary-background-color);
   margin: 0 auto;
-  
-  
 }
 
-.computer-section{
-    width: 100%;
+.computer-section {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,9 +46,6 @@ body {
   justify-content: space-between;
   width: 100%;
   padding: 0.5rem;
-  
-  
-  
 }
 
 .author-display {
@@ -65,10 +56,9 @@ body {
 }
 
 .author-display a {
-    font-size: 2.4rem;
+  font-size: 2.4rem;
   text-decoration: none;
   color: red;
-
 }
 
 .scores-display {
@@ -82,28 +72,26 @@ body {
 .computer-scores-display,
 .player-scores-display {
   display: flex;
-  gap:.8rem;
+  gap: 0.8rem;
   align-items: center;
   font-size: 1.4rem;
 }
-.computer-score{
-    color: var(--computer-score-color);
-
+.computer-score {
+  color: var(--computer-score-color);
 }
-.computer-score, .player-score {
+.computer-score,
+.player-score {
   font-size: 2.4rem;
   font-weight: bold;
 }
-.player-score{
-    color: var(--player-score-color);
+.player-score {
+  color: var(--player-score-color);
 }
-
 
 .player-comp {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
 }
 
 #computerselection,
@@ -120,7 +108,6 @@ body {
   border-radius: 1rem;
 }
 
-
 .who-won {
   margin: 2rem auto;
   padding: 2rem 1rem;
@@ -136,7 +123,6 @@ body {
 }
 
 .play-options {
-
   display: flex;
   gap: 2rem;
   justify-content: center;
@@ -166,13 +152,11 @@ body {
 
 #options p,
 #option p {
-  
   font-size: 1.6rem;
   font-family: sans-serif;
   text-transform: capitalize;
   font-weight: 800;
 }
-
 
 @media screen and (max-width: 56.4em) {
   .game-container {
@@ -189,7 +173,6 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 1.5rem;
-
   }
 
   .play-options {
